JS codes have been added

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <span class="yellow">e</span>
                 <span class="red exclaim">!</span>
             </div>
-            <form id="searchBar" class="searchBar">
+            <form id="searchBar" class="searchBar" role="search">
                 <label for="search" class="offscreen">Enter a search term or phrase</label>
-                <input id="search" type="text" autocomplete="off"/>
+                <input id="search" type="text" autocomplete="off" role="searchbox" />
                 <div id="clear" class="none button clear" role="button" tabindex="0" aria-label="Clear search terms"><i class="fa-solid fa-x"></i></div>
                 <button id="searchButton" class="button searchButton" type="submit" aria-label="Submit button"><i class="fa-solid fa-magnifying-glass blue"></i></button>
             </form>
@@ -43,7 +43,7 @@
             <div id="searchResults" class="searchResults">
 
 
-                <div class="resultItem">
+               <!--  <div class="resultItem">
                     <div class="resultTitle">
                         <a href="">Dachshund</a>
                     </div>
@@ -55,7 +55,7 @@
                             <p class="resultDescription">The dachshund (UK:  DAKS-ənd, DASH-, -⁠huund, -⁠huunt or US:  DAHKS...</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
 
             </div>
